Fix layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@
   font-family: 'Roboto', sans-serif;
   --icon-color: #444746;
 }
+
+body {
+  background-color: #F5F7F9;
+}
